fixed wrapping bug with work modal headers

--- a/src/js/components/Modal/Modal.scss
+++ b/src/js/components/Modal/Modal.scss
@@ -3,7 +3,7 @@
 
 .modal {
   .modal-close-btn {
-    $modal-close-btn-margin: 5px;
+    $modal-close-btn-margin: $gap-ml;
     @include link;
     border-radius: 100%;
     font-size: $txt-lg;
